# lyrio-judge

./: .gitmodules  CMakeLists.txt  Dockerfile  package.json  start.sh  tsconfig.json
.github/workflows/: ci.yml
src/: rpc.ts
